--- a/related-hobbies.css
+++ b/related-hobbies.css
@@ -76,9 +76,20 @@
     transition: 0.5s;
 }
 
-/* .card-body > img {
-  add code to resize all images in the .card-body
-} */
+.product img {
+    height: 14vh;
+    width: 13vw;
+}
+
+.searchBtn {
+    height: 45px;
+    width: 100px;
+    margin-left: -1px;
+    font-weight: 600;
+    background: red;
+    color: white;
+    border: 2px solid red;
+}
 
 .card:hover {
     box-shadow: -2px -1px 25px -4px rgba(0, 0, 0, 0.75);
