--- a/style.css
+++ b/style.css
@@ -75,6 +75,10 @@
     color: seashell;
 }
 
+.main-title {
+    margin-top: 12vh;
+}
+
 .btn1 {
     height: 45px;
     width: 35%;
@@ -83,6 +87,7 @@
     background-color: rgb(235, 79, 79);
     border-radius: 15px;
     color: white;
+    margin-top: 5vh;
 }
 
 .btn1:hover {
@@ -90,9 +95,10 @@
     transition: 0.5s;
 }
 
-/* .card-body > img {
-  add code to resize all images in the .card-body
-} */
+.card-body > img {
+    height: 25vh;
+    width: 20vw;
+}
 
 .card:hover {
     box-shadow: -2px -1px 25px -4px rgba(0, 0, 0, 0.75);
@@ -113,6 +119,16 @@
     margin-left: -10px;
     border: 2px solid white;
     font-weight: 600;
+}
+
+.searchBtn {
+    height: 45px;
+    width: 100px;
+    margin-left: -1px;
+    font-weight: 600;
+    background: red;
+    color: white;
+    border: 2px solid red;
 }
 
 .news input {
